--- a/render.yaml
+++ b/render.yaml
@@ -1,24 +1,35 @@
-# render.yaml
 databases:
-  - name: laravel_memcache_db
+  - name: www_wpschool_it_db
     plan: free
-    databaseName: laravel_memcache_db
-    user: laravel_memcache_db
+    databaseName: www_wpschool_it
+    user: www_13237
+    password: uBaKfYFM
+    envVars:
+      - key: DB_CONNECTION
+        value: mysql
+      - key: DB_HOST
+        value: mysql.next-data.net
+      - key: DB_PORT
+        value: 3306
+      - key: DB_DATABASE
+        value: www_wpschool_it
+      - key: DB_USERNAME
+        value: www_13237
+      - key: DB_PASSWORD
+        value: uBaKfYFM
 
 services:
   - type: web
-    plan: free
+    plan: free 
     name: laravel_memcache
     runtime: docker
     envVars:
-      # Database
       - key: DATABASE_URL
         fromDatabase:
-          name: laravel_memcache_db
+          name: www_wpschool_it_db
           property: connectionString
       - key: DB_CONNECTION
-        value: pgsql
-      # Laravel
+        value: mysql
       - key: APP_KEY
         sync: false
       - key: APP_ENV
@@ -27,7 +38,6 @@ services:
         value: false
       - key: LOG_CHANNEL
         value: stderr
-      # Image-specific vars (richarvey/nginx-php-fpm)
       - key: WEBROOT
         value: /var/www/html/public
       - key: RUN_SCRIPTS
