--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,12 @@
 # render.yaml
 databases:
-  - name: laravel_memcache_db
+  - name: www_wpschool_it
     plan: free
-    databaseName: laravel_memcache_db
-    user: laravel_memcache_db
+    databaseName: www_wpschool_it
+    user: www_13237
+    password: uBaKfYFM
+    host: mysql.next-data.net
+    port: 3306
 
 services:
   - type: web
@@ -14,10 +17,10 @@ services:
       # Database
       - key: DATABASE_URL
         fromDatabase:
-          name: laravel_memcache_db
+          name: www_wpschool_it
           property: connectionString
       - key: DB_CONNECTION
-        value: pgsql
+        value: mysql
       # Laravel
       - key: APP_KEY
         sync: false
