--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,3 @@
-# render.yaml
-databases:
-  - name: www_wpschool_it
-    plan: free
-    databaseName: www_wpschool_it
-    user: www_13237
-    password: uBaKfYFM
-    host: mysql.next-data.net
-    port: 3306
-
 services:
   - type: web
     plan: free
@@ -17,10 +7,10 @@ services:
       # Database
       - key: DATABASE_URL
         fromDatabase:
-          name: www_wpschool_it
+          name: laravel_memcache_db
           property: connectionString
       - key: DB_CONNECTION
-        value: mysql
+        value: pgsql
       # Laravel
       - key: APP_KEY
         sync: false
@@ -39,10 +29,3 @@ services:
         value: 1
       - key: SKIP_COMPOSER
         value: 1
-
-build:
-      steps:
-        - name: Install Dependencies
-          script:
-            - composer install --no-dev
-            - php artisan migrate --force
