--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
         "milon/barcode": "^10.0",
+        "phpmailer/phpmailer": "^6.9",
         "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
